--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-
+justin:
+  name: Justin Lloyd
+  email: justin@example.com
+  password_digest: <%= User.digest('password') %>
